--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/stack": "^5.9.1",
     "@types/react-native": "^0.63.19",
     "@types/react-native-vector-icons": "^6.4.6",
+    "apollo-client": "^2.6.10",
     "graphql": "^15.3.0",
     "mobx": "^5.15.7",
     "mobx-react": "^6.3.0",
     "mobx-state-tree": "^3.17.2",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.0",
